# XiaoZhi_AI

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp  ota.cpp
main/socket/: socket.h  websocket.cpp  websocket.h
main/wake_detect/: wake_word_detect.cpp  wake_word_detect.h
main/xiaozhi_ai/: xiaozhi_ai.cpp  xiaozhi_ai.h
